# simple-cat-feeding-reminder-bot

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  example.env  pyproject.toml  run.py
.github/workflows/: main.yml
dev/: todo.md  todo_07_Jan.md
src/: __init__.py  bot.py  database.py  router.py  startup_tasks.py  utils.py
src/resources/: responses.json
src/routers/: admin.py  chat.py  common.py  dev.py  feeding.py  info.py  main.py  schedule.py  settings.py  start.py  stats.py
src/utils/: __init__.py  timezone_utils.py
tests/: test_imports.py
